# custom_hrms

./: README.md  pyproject.toml
.github/workflows/: ci.yml
custom_hrms/: __init__.py  hooks.py  modules.txt
custom_hrms/api/: attendance.py  completion.py  dashboard.py  early_exit_permission.py  employee.py  employee_checkin.py  get_attendance_summary.py  late_entry_permission.py  lms.py  sick_leave_permission.py  stock_opname.py  stock_opname_log.py
custom_hrms/config/: desktop.py  docs.py
custom_hrms/custom_hrms/doctype/company_announcement/: company_announcement.js  company_announcement.json  company_announcement.py  test_company_announcement.py
custom_hrms/custom_hrms/doctype/early_exit_permit/: early_exit_permit.js  (+3 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  manifest.webmanifest  service-worker copy.js  service-worker.js
frontend/public/js/: camera.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: lms.js
frontend/src/components/: Attendance.jsx  Attendance_stablev1.jsx  BottomNav.jsx  Header.jsx  PWAInstallPrompt.jsx  QuickLinkCard.jsx  Sidebar.jsx  StockOpname.jsx
frontend/src/pages/: Attendance.jsx  ChangePassword.jsx  CourseDetail.jsx  CourseList.jsx  Dashboard.jsx  EarlyLeavePermission.jsx  EmployeeList.jsx  LateEntryPermission.jsx  LeaveMenu.jsx  LeaveRequest.jsx  Lesson.jsx  Login.jsx  MyAttendance.jsx  Quiz.jsx  QuizResult.jsx  SickLeavePermission.jsx  StockOpnamePage.jsx  Training.jsx  TrainingResults.jsx
frontend/src/routes/: AppRoutes.jsx
(+35 files in other folders)
